--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "5.0.1",
     "saas": "^1.0.0",
     "sass": "^1.84.0",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "yocto-queue": "^1.1.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
